<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/signup"
  >

    <EditText
        android:id="@+id/editTextPhone"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40sp"
        android:layout_marginTop="333dp"
        android:background="@drawable/phonenoborder"
        android:backgroundTint="@color/white"
        android:ems="10"
        android:inputType="phone"
        android:padding="10sp"
        tools:text="9766984161"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="319dp"
        android:layout_marginTop="43dp"
        android:text="@string/skip"
        android:textColor="@color/white"
        android:backgroundTint="#5E0000"
        android:background="@drawable/skip"
        android:padding="8sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40sp"
        android:layout_marginTop="20sp"
        android:background="@drawable/phonenoborder"
        android:backgroundTint="@color/black"
        android:text="@string/send_otp"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextPhone"
        tools:ignore="MissingConstraints" />

    <LinearLayout
        android:id="@+id/orlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginHorizontal="30sp"
        app:layout_constraintTop_toBottomOf="@+id/button"
        android:gravity="center_vertical">

        <View
            android:layout_width="0dp"
            android:layout_height="2dp"
            android:layout_weight="1"
            android:background="@color/white" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="or"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:padding="8dp" />

        <View
            android:layout_width="0dp"
            android:layout_height="2dp"
            android:layout_weight="1"
            android:background="@color/white" />

    </LinearLayout>

    <FrameLayout
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40sp"
        android:background="@drawable/phonenoborder"
        android:backgroundTint="@color/white"
        android:padding="10sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/orlayout"
        tools:ignore="MissingConstraints">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/emailimage"
            android:src="@drawable/baseline_email_24"></ImageView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="70dp"
            android:text="@string/continue_with_email"
            android:textSize="20sp"
            android:textStyle="bold" />
    </FrameLayout>

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:columnCount="2"
        android:rowCount="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email">

        <TextView
            android:id="@+id/google"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20sp"
            android:layout_marginEnd="2sp"
            android:background="@drawable/phonenoborder"
            android:backgroundTint="@color/white"
            android:gravity="center"
            android:padding="2sp"
            android:text="Google"
            android:textSize="25sp"
            android:textStyle="bold"
            tools:ignore="MissingConstraints"></TextView>

        <TextView
            android:id="@+id/facebook"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="2sp"
            android:layout_marginTop="20sp"
            android:background="@drawable/phonenoborder"
            android:backgroundTint="@color/white"
            android:gravity="center"
            android:padding="2sp"
            android:text="Facebook"
            android:textSize="25sp"
            android:textStyle="bold"></TextView>
    </GridLayout>


</androidx.constraintlayout.widget.ConstraintLayout>