<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <LinearLayout
        android:id="@+id/hotelinfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        android:orientation="vertical"
        tools:ignore="MissingConstraints">
    <TextView
        android:id="@+id/startview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Eat Healthy"
        android:textSize="20sp"
        android:layout_marginTop="25sp"
        android:layout_marginLeft="10sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/topview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Healthy food, South Indian"
            android:textSize="13sp"
            android:textStyle="bold"
            android:layout_marginTop="5sp"
            android:layout_marginLeft="10sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <TextView
            android:id="@+id/midview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="wakad, pune"
            android:textSize="13sp"
            android:layout_marginTop="5sp"
            android:layout_marginLeft="10sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </LinearLayout>

    <TextView
        android:id="@+id/maxsafety"
        android:layout_width="70sp"
        android:padding="1sp"
        android:gravity="center"
        android:layout_height="wrap_content"
        android:layout_marginStart="10sp"
        android:layout_marginTop="10sp"
        android:background="#4CAF50"
        android:text="MAX SAFETY"
        android:textColor="@color/white"
        android:textSize="10sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hotelinfo" />
    <TextView
        android:id="@+id/deliveyicon"
        android:layout_width="70sp"
        android:padding="1sp"
        android:gravity="center"
        android:layout_height="wrap_content"
        android:layout_marginStart="10sp"
        android:background="#E91E1E"
        android:text="DELIVERY"
        android:textColor="@color/white"
        android:textSize="10sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/maxsafety"/>

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tablayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:tabMode="fixed"
        app:tabGravity="fill"
        android:layout_marginHorizontal="20sp"
        android:layout_marginTop="25sp"
        app:tabSelectedTextColor="#0067BA"
        app:tabIndicatorColor="#0067BA"
        app:layout_constraintTop_toBottomOf="@id/deliveyicon"
        tools:ignore="MissingConstraints">

        <com.google.android.material.tabs.TabItem
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="Delivery"/>

        <com.google.android.material.tabs.TabItem
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="Dining"/>

        <com.google.android.material.tabs.TabItem
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="Reviews"/>

    </com.google.android.material.tabs.TabLayout>

    <GridLayout
        android:id="@+id/grid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:rowCount="1"
        android:columnCount="3"
        android:layout_marginTop="20sp"
        app:layout_constraintTop_toBottomOf="@+id/tablayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        >

        <RelativeLayout
            android:id="@+id/firstlayout"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_columnWeight="1"
            android:gravity="center"
            >
            <ImageView
                android:id="@+id/startimage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/outline_airport_shuttle_24"
                android:layout_marginEnd="10sp"
                android:layout_toLeftOf="@+id/starttext">
            </ImageView>
            <TextView
                android:id="@+id/starttext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mode"/>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/secondlayout"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_columnWeight="1"
            android:gravity="center">
            <ImageView
                android:id="@+id/midimage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/baseline_auto_awesome_24"
                android:layout_marginEnd="10sp"
                android:layout_toLeftOf="@+id/midtext">
            </ImageView>
            <TextView
                android:id="@+id/midtext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/offer"/>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/thirdlayout"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_columnWeight="1"
            android:gravity="center">
            <ImageView
                android:id="@+id/endimage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/baseline_alarm_24"
                android:layout_marginEnd="10sp"
                android:layout_toLeftOf="@+id/endtext">
            </ImageView>
            <TextView
                android:id="@+id/endtext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/time"/>
        </RelativeLayout>

    </GridLayout>

    <RelativeLayout
        android:id="@+id/secondrelativelayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/phonenoborder"
        android:backgroundTint="#C8C6C6"
        android:gravity="start"
        android:padding="3sp"
        android:layout_marginHorizontal="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/grid">

        <ImageView
            android:id="@+id/bikeimage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20sp"
            android:src="@drawable/baseline_directions_bike_24"></ImageView>
        <TextView
            android:id="@+id/biketext"
            android:layout_width="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/bikeimage"
            android:layout_height="wrap_content"
            android:text="Rs 25 Charge" />
    </RelativeLayout>

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tablayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:tabMode="fixed"
        app:tabGravity="fill"
        android:layout_marginHorizontal="20sp"
        android:layout_marginTop="25sp"
        app:tabSelectedTextColor="#0067BA"
        app:tabIndicatorColor="#0067BA"
        app:layout_constraintTop_toBottomOf="@id/secondrelativelayout"
        tools:ignore="MissingConstraints">

        <com.google.android.material.tabs.TabItem
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="Full Menu"/>

        <com.google.android.material.tabs.TabItem
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="Healthy"/>

    </com.google.android.material.tabs.TabLayout>

    <Switch
        android:id="@+id/switch1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Switch"
        android:layout_marginVertical="20sp"
        android:layout_marginLeft="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tablayout1"/>

    <Switch
        android:id="@+id/switch2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="20sp"
        android:text="Switch"
        android:layout_marginHorizontal="20sp"
        app:layout_constraintStart_toEndOf="@+id/switch1"
        app:layout_constraintTop_toBottomOf="@+id/tablayout1"/>

    <androidx.appcompat.widget.SearchView
        android:layout_width="158dp"
        android:layout_height="28dp"
        android:layout_marginRight="20sp"
        android:layout_marginVertical="20sp"
        app:layout_constraintStart_toEndOf="@+id/switch2"
        app:layout_constraintTop_toBottomOf="@+id/tablayout1"/>

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/ViewPager2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10sp"
            app:layout_constraintTop_toBottomOf="@id/switch2" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>